ReceiverCommand, ReceiverVariablesCommand, SenderCommand